fun with triangle

--- a/pages/isTriangle.html
+++ b/pages/isTriangle.html
@@ -7,10 +7,16 @@
     <title>Triangle</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../css/isTriangle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css" integrity="sha512-c93ifPoTvMdEJH/rKIcBx//AL1znq9+4/RmMGafI/vnTFe/dKwnn1uoeszE2zJBQTS1Ck5CqSBE+34ng2PthJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav>
-        <p>fun with triangles 📐</p>
+        <p>fun with triangles 📐</p>        
+        <input type="checkbox" id="click">
+        <label for="click">
+            <i class="fas fa-bars" id="menubar"></i>
+        </label>
+
         <ul>
             <li>
                <a class="active" href="isTriangle.html"> Is Triangle ?</a>
@@ -39,7 +45,22 @@
 
     <button id="submit">check</button>
     </div>
-    <h4 id="output"></h4>
+    <h3 id="output"></h3>
+
+    <footer class="footer">
+        <ul>
+            <li>
+                <a href=""><i class="fab fa-github"></i></a>
+            </li>
+            
+            <li>
+                <a href=""><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href=""><i class="fab fa-linkedin-in"></i></a>
+            </li>
+        </ul>
+    </footer>
     <script src="../js/isTriangle.js"></script>
 </body>
 </html>
