--- a/pages/areaOfTriangle.html
+++ b/pages/areaOfTriangle.html
@@ -22,7 +22,7 @@
 
         <ul>
             <li>
-               <a  href="isTriangle.html"> Is Triangle ?</a>
+               <a href="isTriangle.html"> Is Triangle ?</a>
             </li>
             <li>
                 <a href="triangleQuiz.html">Triangle Quiz</a>
@@ -49,7 +49,20 @@
     </div>
     <button id="submit">calculate Area</button>
     <h3 id="output"></h3>
+    <footer class="footer">
+        <ul>
+            <li>
+                <a href="https://github.com/Ahana001" target="_blank"><i class="fab fa-github"></i></a>
+            </li>
+            
+            <li>
+                <a href="https://twitter.com/Ankita050105" target="_blank"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/ankita001/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+        </ul>
+    </footer>
     <script src="../js/areaOfTriangle.js"></script>
 </body>
-
 </html>
