--- a/pages/hypotenuse.html
+++ b/pages/hypotenuse.html
@@ -48,6 +48,20 @@
     <h3>Hypotenuse will be calculated √(A² + B²)</h3>
     <button id="submit">calculate</button>
     <h3 id="output"></h3>
+    <footer class="footer">
+        <ul>
+            <li>
+                <a href="https://github.com/Ahana001" target="_blank"><i class="fab fa-github"></i></a>
+            </li>
+            
+            <li>
+                <a href="https://twitter.com/Ankita050105" target="_blank"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/ankita001/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+        </ul>
+    </footer>
     <script src="../js/hypotenuse.js"></script>
 </body>
 </html>
