--- a/pages/isTriangle.html
+++ b/pages/isTriangle.html
@@ -50,14 +50,14 @@
     <footer class="footer">
         <ul>
             <li>
-                <a href=""><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Ahana001" target="_blank"><i class="fab fa-github"></i></a>
             </li>
             
             <li>
-                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com/Ankita050105" target="_blank"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/ankita001/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </li>
         </ul>
     </footer>
