--- a/pages/triangleQuiz.html
+++ b/pages/triangleQuiz.html
@@ -67,6 +67,20 @@
     </form>
     <button id="answer">submit Answer</button>
     <h3 id="output"></h3>
+    <footer class="footer">
+        <ul>
+            <li>
+                <a href="https://github.com/Ahana001" target="_blank"><i class="fab fa-github"></i></a>
+            </li>
+            
+            <li>
+                <a href="https://twitter.com/Ankita050105" target="_blank"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/ankita001/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+        </ul>
+    </footer>
     <script src="../js/triangleQuiz.js"></script>
 </body>
 </html>
