--- a/pages/hypotenuse.html
+++ b/pages/hypotenuse.html
@@ -41,13 +41,15 @@
     </nav>
     <h1>Enter the lengths of sides of right angle triangle</h1>
     <img src="../images/pythagoras.png" alt="Triangle" />
-    <div>
-      <label for="a">A = </label>
-      <input type="number" id="a" class="input" />
-    </div>
-    <div>
-      <label for="b">B = </label>
-      <input type="number" id="b" class="input" />
+    <div class="container">
+      <div>
+        <label for="a">A = </label>
+        <input type="number" id="a" class="input" />
+      </div>
+      <div>
+        <label for="b">B = </label>
+        <input type="number" id="b" class="input" />
+      </div>
     </div>
     <h3>Hypotenuse will be calculated √(A² + B²)</h3>
     <button id="submit">calculate</button>
