--- a/pages/hypotenuse.html
+++ b/pages/hypotenuse.html
@@ -43,11 +43,11 @@
     <img src="../images/pythagoras.png" alt="Triangle" />
     <div class="container">
       <div>
-        <label for="a">A = </label>
+        <label for="a">A : </label>
         <input type="number" id="a" class="input" />
       </div>
       <div>
-        <label for="b">B = </label>
+        <label for="b">B : </label>
         <input type="number" id="b" class="input" />
       </div>
     </div>
