--- a/pages/triangleQuiz.html
+++ b/pages/triangleQuiz.html
@@ -1,86 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triangle</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../css/triangleQuiz.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css" integrity="sha512-c93ifPoTvMdEJH/rKIcBx//AL1znq9+4/RmMGafI/vnTFe/dKwnn1uoeszE2zJBQTS1Ck5CqSBE+34ng2PthJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-</head>
-<body>
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../css/triangleQuiz.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css"
+      integrity="sha512-c93ifPoTvMdEJH/rKIcBx//AL1znq9+4/RmMGafI/vnTFe/dKwnn1uoeszE2zJBQTS1Ck5CqSBE+34ng2PthJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <nav>
-        <p>fun with triangles 📐</p>        
-        <input type="checkbox" id="click">
-        <label for="click">
-            <i class="fas fa-bars" id="menubar"></i>
-        </label>
+      <p>fun with triangles 📐</p>
+      <input type="checkbox" id="click" />
+      <label for="click">
+        <i class="fas fa-bars" id="menubar"></i>
+      </label>
 
-        <ul>
-            <li>
-               <a  href="isTriangle.html"> Is Triangle ?</a>
-            </li>
-            <li>
-                <a class="active" href="triangleQuiz.html">Triangle Quiz</a>
-            </li>
-            <li>
-                <a href="hypotenuse.html">Find Hypotenuse</a>
-            </li>
-            <li>
-                <a href="areaOfTriangle.html">Area Of Triangle</a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="isTriangle.html"> Is Triangle ?</a>
+        </li>
+        <li>
+          <a class="active" href="triangleQuiz.html">Triangle Quiz</a>
+        </li>
+        <li>
+          <a href="hypotenuse.html">Find Hypotenuse</a>
+        </li>
+        <li>
+          <a href="areaOfTriangle.html">Area Of Triangle</a>
+        </li>
+      </ul>
     </nav>
-    <h1>Triangle Quiz </h1>
+    <h1>Triangle Quiz</h1>
     <form class="question">
-        <div class="question-container">
-        <p>What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
-        <input type="radio" name="question1" value="45"  class="radioBtn">
+      <div class="question-container">
+        <p>
+          What is the third angle for the triangle where angle1 = 45° and angle2
+          = 45°?
+        </p>
+        <input type="radio" name="question1" value="45" class="radioBtn" />
         <label for="45">45 &#176;</label>
-        <input type="radio" name="question1" value="60" class="radioBtn">
+        <input type="radio" name="question1" value="60" class="radioBtn" />
         <label for="60">60 &#176;</label>
-        <input type="radio" name="question1" value="90" class="radioBtn">
+        <input type="radio" name="question1" value="90" class="radioBtn" />
         <label for="90">90 &#176;</label>
-        </div>
+      </div>
 
-        <div class="question-container">
+      <div class="question-container">
         <p>If a triangle has an angle of 90 degrees, what is it called?</p>
-        <input type="radio" name="question2" value="Acute">
+        <input type="radio" name="question2" value="Acute" />
         <label for="Acute">Acute</label>
-        <input type="radio" name="question2" value="Obtuse">
+        <input type="radio" name="question2" value="Obtuse" />
         <label for="Obtuse">Obtuse</label>
-        <input type="radio" name="question2" value="Right Angled">
+        <input type="radio" name="question2" value="Right Angled" />
         <label for="Right Angled">Right Angled</label>
-        </div>
+      </div>
 
-        <div class="question-container">
+      <div class="question-container">
         <p>Which triangle has all three sides equal in length?</p>
-        <input type="radio" name="question3" value="Equilateral">
+        <input type="radio" name="question3" value="Equilateral" />
         <label for="Equilateral">Equilateral</label>
-        <input type="radio" name="question3" value="Isosceles">
+        <input type="radio" name="question3" value="Isosceles" />
         <label for="Isosceles">Isosceles</label>
-        <input type="radio" name="question3" value="Scalene">
+        <input type="radio" name="question3" value="Scalene" />
         <label for="Scalene">Scalene</label>
-        </div>
+      </div>
     </form>
     <button id="answer">submit Answer</button>
     <h3 id="output"></h3>
     <footer class="footer">
-        <ul>
-            <li>
-                <a href="https://github.com/Ahana001" target="_blank"><i class="fab fa-github"></i></a>
-            </li>
-            
-            <li>
-                <a href="https://twitter.com/Ankita050105" target="_blank"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/ankita001/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="https://github.com/Ahana001" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+        </li>
+
+        <li>
+          <a href="https://twitter.com/Ankita050105" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/ankita001/" target="_blank"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+        </li>
+      </ul>
     </footer>
     <script src="../js/triangleQuiz.js"></script>
-</body>
+  </body>
 </html>
