refactor:add more questions

--- a/pages/triangleQuiz.html
+++ b/pages/triangleQuiz.html
@@ -72,6 +72,99 @@
         <input type="radio" name="question3" value="Scalene" />
         <label for="Scalene">Scalene</label>
       </div>
+
+      <div class="question-container">
+        <p>
+          If a triangle has sides equal to 5cm, 4cm and 6cm, then what is the
+          value for its perimeter?
+        </p>
+        <input type="radio" name="question4" value="12cm" />
+        <label for="12cm">12cm</label>
+        <input type="radio" name="question4" value="15cm" />
+        <label for="15cm">15cm</label>
+        <input type="radio" name="question4" value="30cm" />
+        <label for="30cm">30cm</label>
+      </div>
+
+      <div class="question-container">
+        <p>
+          What is the area of a triangle whose altitude and base are 12 cm and 7
+          cm, respectively?
+        </p>
+        <input type="radio" name="question5" value="42cm" />
+        <label for="42cm">42cm</label>
+        <input type="radio" name="question5" value="35cm" />
+        <label for="35cm">35cm</label>
+        <input type="radio" name="question5" value="50cm" />
+        <label for="50cm">50cm</label>
+      </div>
+
+      <div class="question-container">
+        <p>
+          If O be the circum centre of a triangle PQR and angle QOR = 110°,
+          angle OPR = 25°, then the measure of angle PRQ is
+        </p>
+        <input type="radio" name="question6" value="55" />
+        <label for="55">55°</label>
+        <input type="radio" name="question6" value="60" />
+        <label for="60">60°</label>
+        <input type="radio" name="question6" value="50" />
+        <label for="50">50°</label>
+      </div>
+
+      <div class="question-container">
+        <p>
+          If the two angles of a triangle are 45° and 60°, respectively, then
+          find the third angle.
+        </p>
+        <input type="radio" name="question7" value="55" />
+        <label for="55">55°</label>
+        <input type="radio" name="question7" value="80" />
+        <label for="80">80°</label>
+        <input type="radio" name="question7" value="75" />
+        <label for="75">75°</label>
+      </div>
+
+      <div class="question-container">
+        <p>
+          The sum of all the angles of a triangle is always equal to what
+          degrees?
+        </p>
+        <input type="radio" name="question8" value="250" />
+        <label for="250">250°</label>
+        <input type="radio" name="question8" value="180" />
+        <label for="180">180°</label>
+        <input type="radio" name="question8" value="90" />
+        <label for="90">90°</label>
+      </div>
+
+      <div class="question-container">
+        <p>What is the name of the longest side of a right-angled triangle?</p>
+        <input type="radio" name="question9" value="Pythagoras" />
+        <label for="Pythagoras">Pythagoras</label>
+        <input type="radio" name="question9" value="Hypotenoose" />
+        <label for="Hypotenoose">Hypotenoose</label>
+        <input type="radio" name="question9" value="Hypotenuse" />
+        <label for="Hypotenuse">Hypotenuse</label>
+      </div>
+
+      <div class="question-container">
+        <p>What kind of triangles does the Pythagorean Theorem work with?</p>
+        <input type="radio" name="question10" value="Right" />
+        <label for="Right">Right</label>
+        <input type="radio" name="question10" value="Isosceles" />
+        <label for="Isosceles">Isosceles</label>
+        <input type="radio" name="question10" value="Equilateral" />
+        <label for="Equilateral">Equilateral</label>
+      </div>
+
+      <div class="question-container">
+        <p>Does an 8, 15, 16 triangle have a Right Angle?</p>
+        <input type="radio" name="question11" value="yes" />
+        <label for="yes">yes</label>
+        <input type="radio" name="question11" value="no" />
+        <label for="no">no</label>
+      </div>
     </form>
     <button id="answer">submit Answer</button>
     <h3 id="output"></h3>
